Update skeleton
