# internal/db/models.go
@@ -1,0 +1,19 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+
+package db
+
+import (
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type City struct {
+	ID               int32            `db:"id" json:"id"`
+	Name             string           `db:"name" json:"name"`
+	CreatedAt        pgtype.Timestamp `db:"created_at" json:"created_at"`
+	UpdatedAt        pgtype.Timestamp `db:"updated_at" json:"updated_at"`
+	Lat              pgtype.Numeric   `db:"lat" json:"lat"`
+	Lon              pgtype.Numeric   `db:"lon" json:"lon"`
+	AvailableModules []string         `db:"available_modules" json:"available_modules"`
+}
